pom changes for release target to Java 20